RESOLVED FIXED292844
AX: Fix permitted values for aria-setsize, aria-posinset (both >= 1) and specify fallbacks
https://bugs.webkit.org/show_bug.cgi?id=292844
Summary AX: Fix permitted values for aria-setsize, aria-posinset (both >= 1) and spec...
Rahim Abdi
Reported 2025-05-11 14:48:10 PDT
Core-AAM will be updated to resolve inconsistencies around possible values for aria-setsize/aria-posinset. Essentially: aria-setsize: - Empty string is provided or the attribute is missing (undefined) = ignore or set on per-role basis - Positive integers (i.e., whole numbers > 0) = set to specified integer - 0, negative numbers or malformed/invalid values = indeterminate (i.e., "-1"). In this case, also set aria-posinset = 1 aria-posinset: - Empty string is provided or the attribute is missing (undefined) = ignore or set on per-role basis - Positive integers (i.e., whole numbers > 0) = set to specified integer - 0, negative numbers or malformed/invalid values = 1 ARIA PR #2341: https://github.com/w3c/aria/pull/2341
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-11 14:48:18 PDT
Rahim Abdi
Comment 2 2025-05-11 16:08:30 PDT
EWS
Comment 3 2025-06-04 08:04:31 PDT
Committed 295814@main (4220ccde4c53): <https://commits.webkit.org/295814@main> Reviewed commits have been landed. Closing PR #45225 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.