AX: Fix permitted values for aria-setsize, aria-posinset (both >= 1) and specify fallbacks https://bugs.webkit.org/show_bug.cgi?id=292844 rdar://151113693

Reviewed by Tyler Wilcock.

ARIA (Core-AAM) has recently clarified treatment of aria-setsize and aria-posinset and specifically,
the meaning of supplying "-1" as a value for these two attributes. This PR updates aria-setsize/aria-posinset
treatment for invalid values, and thus what is exposed by the accessibility API in accordance with the ARIA spec update.
It also updates the /LayoutTests/accessibility/aria-setsize-posinset.html test to use the expectAsync() function.

* LayoutTests/accessibility/aria-setsize-posinset.html: Added additional tests and updated async tests.
* LayoutTests/accessibility/aria-setsize-posinset-expected.txt: Updated test expectations.
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::setSize const):
(WebCore::AccessibilityObject::posInSet const):

Canonical link: https://commits.webkit.org/295814@main